--- a/pom.xml
+++ b/pom.xml
@@ -127,5 +127,6 @@
   	<module>spring3</module>
   	<module>spring4</module>
     <module>spring5</module>
+    <module>spring6_webflow</module>
   </modules>
 </project>
